--- a/.github/workflows/resusable.yml
+++ b/.github/workflows/resusable.yml
@@ -30,7 +30,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: | 
+            echo ${{ vars.test_env }}
+            echo ${{ secrets.test_secret }}
+        
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
