--- a/.github/workflows/TestEnvVariables.yml
+++ b/.github/workflows/TestEnvVariables.yml
@@ -14,7 +14,8 @@ on:
   workflow_dispatch:
 
 env: 
-  env_var: ${{ env.TestVariable }}
+  env_var: ${{ vars.TestVariable }}
+  env_new: ${{ secrets.TEST_SECRET }}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
