--- a/.github/workflows/TestEnvVariables.yml
+++ b/.github/workflows/TestEnvVariables.yml
@@ -38,4 +38,5 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          echo ${{env.env_var}}
+          echo ${{env.env_var}}          
+          echo ${{env.env_new}}
